Fix ended polls overlapping event bubbles (#11895)
* Fix ended polls overlapping event bubbles


* Update snapshot


---------

--- a/res/css/views/rooms/_EventBubbleTile.pcss
+++ b/res/css/views/rooms/_EventBubbleTile.pcss
@@ -358,6 +358,11 @@ limitations under the License.
             // Keep height equal to text for shield alignment, additional 2px because of 1px padding on text
             height: calc($font-18px + 2px);
         }
+
+        .mx_MPollEndBody {
+            // Prevent the poll end body from exceeding the tile width
+            width: 100%;
+        }
     }
 
     &:not(.mx_EventTile_noBubble) .mx_EventTile_line:not(.mx_EventTile_mediaLine) {
